--- a/app/Resources/views/reebonz/partials/header.html.twig
+++ b/app/Resources/views/reebonz/partials/header.html.twig
@@ -55,6 +55,7 @@
             <li><a href="#/color">顏色設定</a></li>
             <li><a href="#/goodsLevel">新舊設定</a></li>
             <li><a href="#/supplier">供貨商設定</a></li>
+            <li><a href="#/activity">活動設定</a></li>
           </ul>
         </li>
 
@@ -65,10 +66,6 @@
             <li><a href="#/user">員工</a></li>
             <li><a href="#/custom">客戶</a></li>
           </ul>
-        </li>
-
-        <li>
-          <a href="#">活動</a>
         </li>
       </ul>
 
