Refactor ApiBundle/GoodsPassport

--- a/src/Woojin/GoodsBundle/Resources/views/GoodsPassport/partials/add/_keyin.html.twig
+++ b/src/Woojin/GoodsBundle/Resources/views/GoodsPassport/partials/add/_keyin.html.twig
@@ -55,6 +55,8 @@
 
 			<my-form-select model="goods" entitys="$parent.entity.suppliers" name="'supplier'" label="'供貨商'"></my-form-select>
 
+			<my-form-select model="goods" entitys="$parent.entity.stores" name="'store'" label="'部門'"></my-form-select>
+
 			<my-form-number model="goods" label="'數量'" name="'amount'" isPrice="1"></my-form-number>
 			
 			<div class="form-group">
