--- a/src/Woojin/GoodsBundle/Resources/views/GoodsPassport/partials/res/_listTitle.html.twig
+++ b/src/Woojin/GoodsBundle/Resources/views/GoodsPassport/partials/res/_listTitle.html.twig
@@ -5,6 +5,8 @@
 >
 	<span class="caret"></span>
 	
+	<input ng-show="allow" type="checkbox" ng-model="goods.isCheck" onclick="event.stopPropagation();"/>
+
 	<b>
 		<small ng-show="goods.isDelete;">刪除</small>
 		
