--- a/src/Woojin/GoodsBundle/Resources/views/GoodsPassport/partials/search/_res.html.twig
+++ b/src/Woojin/GoodsBundle/Resources/views/GoodsPassport/partials/search/_res.html.twig
@@ -6,8 +6,14 @@
 
 	<msg-footer success="$parent.successMsg" error="$parent.errorMsg" on-empty="$parent.emptyMsg();"></msg-footer>
 
+	<div class="row">
+		<button ng-show="searchRepo.length > 0;" ng-click="checkAll(); checkStatus = !checkStatus" class="btn btn-default btn-sm">
+			<span class="glyphicon glyphicon-ok"></span>
+		</button>
+	</div>
+
 	<div class="row" ng-repeat="goods in searchRepo">
-		<goods-list-title goods="goods" set-lazy-img="setLazyImg(goods);"></goods-list-title><hr/>
+		<goods-list-title goods="goods" allow="true" set-lazy-img="setLazyImg(goods);"></goods-list-title><hr/>
 
 		<div ng-show="goods.isDisplay && goods.isDelete;" class="alert alert-danger" role="alert">已經刪除</div>
 		
@@ -33,8 +39,37 @@
 					</select>
 				</div>
 			</div>
+
+			<div class="form-group">
+				<label class="col-sm-2 control-label">操作</label>
+
+				<div class="col-sm-9">
+					<select ng-model="actType" class="form-control">
+						<option value="">請選擇</option>
+						<option value="onSaleChecked">上架</option>
+						<option value="offSaleChecked">下架</option>
+						<option value="deleteChecked">刪除</option>
+						<option value="punchOutChecked">刷出</option>
+						<option value="punchInChecked">刷入</option>
+					</select>
+				</div>
+
+				<div class="col-sm-1">
+					<button ng-click="doAct();" class="btn btn-primary">確定</button>
+				</div>
+			</div>
+
+			<div ng-show="actType == 'punchInChecked' || actType == 'punchOutChecked'" class="form-group">
+				<label class="col-sm-2 control-label">欲刷入之活動</label>
+
+				<div class="col-sm-10">
+					<select ng-model="punchActivity" ng-options="activity.id as activity.name for activity in entity.activitys" class="form-control"></select>					
+				</div>
+			</div>
 		</form>
 	</div>
+
+	<hr>
 
 	<pagination ng-show="totalItems>0;" max-size="10" rotate="false" boundary-links="true" items-per-page="perPage" total-items="totalItems" ng-model="currentPage" ng-change="pageChanged()"></pagination>
 </div>
