--- a/src/Woojin/OrderBundle/Resources/views/Order/partials/special/list.html.twig
+++ b/src/Woojin/OrderBundle/Resources/views/Order/partials/special/list.html.twig
@@ -18,7 +18,7 @@
 				</label>
 
 				<div class="col-sm-10">
-					<input type="number" class="form-control" ng-model="goods.orders.required" readonly />
+					<input type="number" class="form-control" ng-model="goods.orders.required" ng-change="countActivitySale();" />
 				</div>
 			</div>
 
