--- a/app/Resources/views/reebonz/partials/header.html.twig
+++ b/app/Resources/views/reebonz/partials/header.html.twig
@@ -24,7 +24,7 @@
             <li class="dropdown-header">刷件操作</li>
             
             <li><a href="#/normal">店內銷貨</a></li>
-            <li><a href="#/special">活動銷貨</a></li>
+            <li><a href="#/special/0">活動銷貨</a></li>
 
             <li class="divider"></li>
             <li><a href="#/move">調貨請求</a></li>
