--- a/src/Woojin/GoodsBundle/Resources/views/GoodsPassport/partials/res/_listTitle.html.twig
+++ b/src/Woojin/GoodsBundle/Resources/views/GoodsPassport/partials/res/_listTitle.html.twig
@@ -1,5 +1,5 @@
 {% verbatim %}
-<h4 class="pointer"
+<h4 class="pointer font_size_12"
 	ng-click="switchDisplay(goods); lazyImg(goods);" 
 	ng-class="{dropup: !goods.isDisplay}" 
 >
