--- a/src/Woojin/OrderBundle/Resources/views/Order/special.html.twig
+++ b/src/Woojin/OrderBundle/Resources/views/Order/special.html.twig
@@ -11,7 +11,7 @@
 	</div>
 
 	<div class="panel-heading">
-		<h2 class="panel-title pointer" ng-click="isRecordPanelVisible=!isRecordPanelVisible;" ng-class="{dropup: !isRecordPanelVisible}"><span class="caret"></span>&nbsp; 本日記錄</h2>
+		<h2 class="panel-title pointer" ng-click="isRecordPanelVisible=!isRecordPanelVisible;" ng-class="{dropup: !isRecordPanelVisible}"><span class="caret"></span>&nbsp; 活動銷貨記錄</h2>
 	</div>
 
 	<div class="panel-body" ng-show="isRecordPanelVisible">
