--- a/src/Woojin/StoreBundle/Resources/views/Activity/platform.html.twig
+++ b/src/Woojin/StoreBundle/Resources/views/Activity/platform.html.twig
@@ -157,7 +157,7 @@
         <div class="form-group">
           <label class="col-sm-2 control-label">每頁顯示筆數</label>
           
-          <div class="col-sm-10">
+          <div class="col-sm-9">
             <select ng-model="$parent.perPage" name="per-page" class="form-control" ng-change="$parent.currentPage=1; _query();">
               <option value="10">10</option>
               <option value="20">20</option>
@@ -165,6 +165,10 @@
               <option value="50">50</option>
               <option value="100">100</option>
             </select>
+          </div>
+
+          <div class="col-sm-1">
+            <button class="btn btn-info" type="button" ng-click="export();">匯出</button>
           </div>
         </div>
       </form>
