--- a/app/Resources/views/reebonz/base.html.twig
+++ b/app/Resources/views/reebonz/base.html.twig
@@ -5,15 +5,17 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>{% block title %}Reebonz商品管理系統{% endblock %}</title>
+	<title>{% block title %}Reebonz{% endblock %}</title>
 
 	{% block head %}
 	<!--/ CSS -->
 	<!-- <link rel="stylesheet" href="/bundles/woojinbackend/css/bootstrap.yeti.min.css"> -->
 	<link rel="stylesheet" href="/bundles/woojinbackend/css/animate.css">
 	<link rel="stylesheet" href="/bundles/woojinbackend/css/backend.layout.css">
+	<link rel="stylesheet" href="/bundles/woojinbackend/css/bootstrap.yeti.min.css">
 	<link rel="stylesheet" href="/bundles/woojinbackend/css/yeti.custom.fix.css">
-	<link rel="stylesheet" href="//bootswatch.com/yeti/bootstrap.min.css">
+	
+	<link rel="stylesheet" href="/bundles/woojinbackend/css/bootstrap.yeti.min.css">
 	<link rel="stylesheet" href="/bundles/woojinbackend/js/plugin/datetimepicker/css/datepicker3.css">
 	<link rel="stylesheet" href="/bundles/woojinbackend/js/angular-seed/app/bower_components/angular-block-ui/angular-block-ui.min.css"/>
 	<link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
