--- a/app/Resources/views/reebonz/partials/header.html.twig
+++ b/app/Resources/views/reebonz/partials/header.html.twig
@@ -1,7 +1,7 @@
 <div class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
-      <a href="#/backend" class="navbar-brand"><span class="glyphicon glyphicon-home"></span>Reebonz
+      <a href="#/backend" class="navbar-brand" my-title-symlink-a><span class="glyphicon glyphicon-home"></span>Reebonz
       </a>
       
       <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
@@ -18,16 +18,16 @@
           <a class="dropdown-toggle" data-toggle="dropdown">訂單 <b class="caret"></b></a>
         
           <ul class="dropdown-menu">
-            <li><a href="#/orders">訂單管理</a></li>
+            <li><a href="#/orders" my-title-symlink-a>訂單管理</a></li>
             
             <li class="divider"></li>
             <li class="dropdown-header">刷件操作</li>
             
-            <li><a href="#/normal">店內銷貨</a></li>
-            <li><a href="#/special/0">活動銷貨</a></li>
+            <li><a href="#/normal" my-title-symlink-a>店內銷貨</a></li>
+            <li><a href="#/special/0" my-title-symlink-a>活動銷貨</a></li>
 
             <li class="divider"></li>
-            <li><a href="#/move">調貨請求</a></li>
+            <li><a href="#/move" my-title-symlink-a>調貨請求</a></li>
             <!-- <li><a href="#/">退貨</a></li> -->
             
          <!--    <li><a href="#">操作</a></li><!-- 各種銷貨都在這裡-->
@@ -48,18 +48,18 @@
           <a class="dropdown-toggle" data-toggle="dropdown">商品 <b class="caret"></b></a>
           
           <ul class="dropdown-menu">
-            <li><a href="#/goodsPassport">商品管理</a></li>
+            <li><a href="#/goodsPassport" my-title-symlink-a>商品管理</a></li>
 
             <li class="divider"></li>
             
             <li class="dropdown-header">後設</li>
-            <li><a href="#/goodsMt">材料設定</a></li>
-            <li><a href="#/brand">品牌設定</a></li>
-            <li><a href="#/pattern">款式設定</a></li>
-            <li><a href="#/goodsSource">來源設定</a></li>
-            <li><a href="#/color">顏色設定</a></li>
-            <li><a href="#/goodsLevel">新舊設定</a></li>
-            <li><a href="#/supplier">廠商設定</a></li>
+            <li><a href="#/goodsMt" my-title-symlink-a>材料設定</a></li>
+            <li><a href="#/brand" my-title-symlink-a>品牌設定</a></li>
+            <li><a href="#/pattern" my-title-symlink-a>款式設定</a></li>
+            <li><a href="#/goodsSource" my-title-symlink-a>來源設定</a></li>
+            <li><a href="#/color" my-title-symlink-a>顏色設定</a></li>
+            <li><a href="#/goodsLevel" my-title-symlink-a>新舊設定</a></li>
+            <li><a href="#/supplier" my-title-symlink-a>廠商設定</a></li>
           </ul>
         </li>
 
@@ -67,13 +67,13 @@
           <a class="dropdown-toggle" data-toggle="dropdown">人事 <b class="caret"></b></a>
     
           <ul class="dropdown-menu">
-            <li><a href="#/user">員工</a></li>
-            <li><a href="#/custom">客戶</a></li>
+            <li><a href="#/user" my-title-symlink-a>員工</a></li>
+            <li><a href="#/custom" my-title-symlink-a>客戶</a></li>
           </ul>
         </li>
 
         <li>
-          <li><a href="#/activity">活動</a></li>
+          <li><a href="#/activity" my-title-symlink-a>活動</a></li>
         </li>
       </ul>
 
