--- a/src/Woojin/GoodsBundle/Resources/views/GoodsPassport/partials/res/_listTitle.html.twig
+++ b/src/Woojin/GoodsBundle/Resources/views/GoodsPassport/partials/res/_listTitle.html.twig
@@ -22,6 +22,8 @@
 	<span ng-show="goods.brand" class="label label-default">{{ goods.brand.name }}</span>&nbsp;&nbsp;
 	
 	<i>{{ goods.sn }} </i>&nbsp;&nbsp;
+
+	<i>{{ goods.org_sn }}</i>&nbsp;&nbsp;
 	
 	<span ng-show="goods.fake_price && goods.fake_price > 0;" class="pull-right small-font">|&nbsp;一般價:{{ goods.fake_price }}元</span>&nbsp;&nbsp;
 	
