--- a/src/Woojin/OrderBundle/Resources/views/Order/partials/special/condition.html.twig
+++ b/src/Woojin/OrderBundle/Resources/views/Order/partials/special/condition.html.twig
@@ -1,6 +1,5 @@
 {% verbatim %}
 <form novalidate class="form-horizontal" role="form">
-
 	<div class="form-group">
 		<label class="col-sm-2 control-label">活動</label>
 
@@ -20,31 +19,33 @@
 		</div>
 	</div>
 
-  <div class="form-group" ng-show="(custom.isExist == 1 || custom.allowNull == 1) && choose.Gactivity.id != 0;">
-  	<label class="col-sm-2 control-label">產編</label>
+    <div class="form-group" ng-show="(custom.isExist == 1 || custom.allowNull == 1) && choose.Gactivity.id != 0;">
+    	<label class="col-sm-2 control-label">產編</label>
 
-  	<div class="col-sm-10">
-  		<input my-enter="get(barcode);" ng-model="barcode" type="text" class="form-control" placeholder="產編" />
-  	</div>
-  </div>
+    	<div class="col-sm-10">
+    		<input my-enter="get(barcode);" ng-model="barcode" type="text" class="form-control" placeholder="產編" />
+    	</div>
+    </div>
 
-  <div class="form-group" ng-show="choose.Gactivity.id != 0;">
-  	<label class="col-sm-2 control-label">Email</label>
+    <div class="form-group" ng-show="choose.Gactivity.id != 0;">
+    	<label class="col-sm-2 control-label">Email</label>
 
-    <div class="col-sm-10">
-    	<div class="checkbox">
-    		<label>
-    			<input type="checkbox" ng-model="custom.allowNull" ng-change="setCustomToNull();"/>客戶暫無資料
-    		</label>
-			</div>
-		</div>
-  </div>
+        <div class="col-sm-10">
+        	<div class="checkbox">
+        		<label>
+        			<input type="checkbox" ng-model="custom.allowNull" ng-change="setCustomToNull();"/>客戶暫無資料
+        		</label>
+        	</div>
+        </div>
+    </div>
 
 	<div ng-show="goodsRepo.length > 0 && choose.Gactivity.id != 0;" class="form-group">
 		<label class="col-sm-2 control-label">操作</label>
 
 		<div class="col-sm-10">
-			<button type="button" class="btn btn-primary"  ng-click="pay();"><span class="glyphicon glyphicon-usd"></span>結帳</button>
+			<button type="button" class="btn btn-primary"  ng-click="pay();">
+                <span class="glyphicon glyphicon-usd"></span>結帳
+            </button>
 		</div>
 	</div>
 </form>
