--- a/src/Woojin/OrderBundle/Resources/views/Order/partials/special/list.html.twig
+++ b/src/Woojin/OrderBundle/Resources/views/Order/partials/special/list.html.twig
@@ -12,61 +12,69 @@
   	is-disabled="status.isFirstDisabled"
   >
     <form class="form-horizontal" role="form">
-			<div class="form-group">
-				<label class="col-sm-2 control-label">
-					售價 <small ng-show="goods.allow_discount == 1">(包含活動折扣)</small><mark ng-show="goods.allow_discount == 0;">不可折扣</mark>
-				</label>
+		<div class="form-group">
+			<label class="col-sm-2 control-label">
+				售價 <small ng-show="goods.allow_discount == 1">(包含活動折扣)</small><mark ng-show="goods.allow_discount == 0;">不可折扣</mark>
+			</label>
 
-				<div class="col-sm-10">
-					<input type="number" class="form-control" ng-model="goods.orders.required" ng-blur="goods.price=goods.orders.required; countActivitySale(); setHeading(goods);" />
-				</div>
+			<div class="col-sm-10">
+				<input type="number" class="form-control" ng-model="goods.orders.required" ng-blur="goods.price=goods.orders.required; goods.paid=goods.price; countActivitySale(); setHeading(goods);" />
 			</div>
+		</div>
 
-			<!-- <my-form-number model="goods" label="'折扣'" name="'discount'" isPrice="1" isRequired="1" on-change="changeDiscount(goods)" ></my-form-number> -->
+		<!-- <my-form-number model="goods" label="'折扣'" name="'discount'" isPrice="1" isRequired="1" on-change="changeDiscount(goods)" ></my-form-number> -->
 
-			<div class="form-group">
-				<label class="col-sm-2 control-label">已付</label>
+		<div class="form-group">
+			<label class="col-sm-2 control-label">已付</label>
 
-				<div class="col-sm-10">
-					<input type="number" class="form-control" ng-model="goods.orders.paid" />
-				</div>
+			<div class="col-sm-10">
+				<input type="number" class="form-control" ng-model="goods.orders.paid" />
 			</div>
-			
-			<div class="form-group">
-				<label class="col-sm-2 control-label">付費方式</label>
+		</div>
+		
+		<div class="form-group">
+			<label class="col-sm-2 control-label">付費方式</label>
 
-				<div class="col-sm-10">
-					<select name="payType" class="form-control" 
-						ng-model="goods.orders.pay_type" 
-						ng-options="payType.id as payType.name for payType in payTypes"></select>
-				</div>
+			<div class="col-sm-10">
+				<select name="payType" class="form-control" 
+					ng-model="goods.orders.pay_type" 
+					ng-options="payType.id as payType.name for payType in payTypes"></select>
 			</div>
+		</div>
 
-			<!-- <div class="form-group">
-				<label class="col-sm-2 control-label">種類</label>
+		<!-- <div class="form-group">
+			<label class="col-sm-2 control-label">種類</label>
 
-				<div class="col-sm-10">
-					<select name="kind" class="form-control" ng-model="goods.orders.kind"
-						ng-options="ordersKind.id as ordersKind.name for ordersKind in ordersKinds"
-					></select>
-				</div>
-			</div> -->
-
-			<div class="form-group">
-				<label class="col-sm-2 control-label">訂單備註</label>
-
-				<div class="col-sm-10">
-					<textarea class="form-control" ng-model="goods.orders.memo" ></textarea>
-				</div>
+			<div class="col-sm-10">
+				<select name="kind" class="form-control" ng-model="goods.orders.kind"
+					ng-options="ordersKind.id as ordersKind.name for ordersKind in ordersKinds"
+				></select>
 			</div>
+		</div> -->
 
-			<div class="form-group">
-				<label class="col-sm-2 control-label">&nbsp;</label>
+		<div class="form-group">
+			<label class="col-sm-2 control-label">訂單備註</label>
 
-				<div class="col-sm-10">
-					<button class="btn btn-default" ng-click="cancel(goods);">取消</button>
-				</div>
+			<div class="col-sm-10">
+				<textarea class="form-control" ng-model="goods.orders.memo"></textarea>
 			</div>
+		</div>
+
+		<div class="form-group">
+			<label class="col-sm-2 control-label">卡號</label>
+
+			<div class="col-sm-10">
+				<input class="form-control" ng-model="goods.orders.card_sn" />
+			</div>
+		</div>
+
+		<div class="form-group">
+			<label class="col-sm-2 control-label">&nbsp;</label>
+
+			<div class="col-sm-10">
+				<button class="btn btn-default" ng-click="cancel(goods);">取消</button>
+			</div>
+		</div>
     </form>
   </accordion-group>
 </accordion>
